--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -99,11 +99,10 @@ body{
         font-size: 17px;
       }
     }
-    .activity-status{
+    .user-status{
       color: #e0e0e0;
       font-size: 13px;
       &.online{
-        font-size: 13px;
         color: #64dd18;
       }
     }
