--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <div class="user-info-right">
             <div class="user-name"><%= @current_user.name %></div>
             <div id="user-data" user-data-id="<%= @current_user.id %>"></div>
-            <div class="activity-status <%= current_user_status %> user-<%= @current_user.id %>-status">
+            <div class="user-status <%= current_user_status %> user-<%= @current_user.id %>-status">
               ●オンライン
             </div>
           </div>
