change class name

--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -180,7 +180,7 @@
     background-color: #f4f4f4;
     transition: 0.5s;
   }
-  .activity-status{
+  .user-status{
     color: #e0e0e0;
     font-size: 25px;
     &.online{
