--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -135,6 +135,7 @@
   padding: 10px 0px 80px 10px;
   margin-top: 55px;
   .cv-spinner {
+    margin: 22px 0px;
     height: 100%;
     display: flex;
     justify-content: center;
