--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -25,7 +25,7 @@
               </div>
             <% end %>
           </div>
-          <p><%= safe_join(message.sentence.split("\n"),tag(:br)) %></p>
+          <p><%= markdown(message.sentence) %></p>
         </div>
       </div>
     <% end %>
