--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -1,12 +1,12 @@
 <div class="search-area">
-  <%= search_form_for @q, url: room_search_joined_path do |f| %>
+  <%= search_form_for @search, url: room_search_joined_path do |f| %>
     <%= f.search_field :name_cont, placeholder: "キーワードを入力して参加済みのルームを検索", required: true  %>
     <% f.submit '検索' %>
   <% end %>
 </div>
 
 <div class="rooms">
-  <th><%= sort_link(@q, :created_at, "作成日", hide_indicator: true) %></th>
+  <th><%= sort_link(@search, :created_at, "作成日", hide_indicator: true) %></th>
   <% @results.each do |room| %>
     <%= link_to room_page_path(room.id) do %>
         <% if UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
