--- a/chatapp/app/views/room/search_result.html.erb
+++ b/chatapp/app/views/room/search_result.html.erb
@@ -1,4 +1,4 @@
-「カテゴリー: <%= @q.category_eq %>」、「ルーム名: <%= @q.name_cont %>」の検索結果は<%= @results.count %>件です<br>
+「カテゴリー: <%= @search.category_eq %>」、「ルーム名: <%= @search.name_cont %>」の検索結果は<%= @results.count %>件です<br>
 <div class="rooms">
   <% @results.each do |room| %>
     <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) # not joined rooms %>
