--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -112,7 +112,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  background: rgba(0,0,0,50%);
+  background: rgba(0,0,0,0.5);
   padding: 40px 20px;
   overflow: auto;
   opacity: 0;
