--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -225,6 +225,7 @@
       }
     }
     .message-right {
+      width: 100%;
       .message-user-info {
         display: flex;
         align-items: flex-end;
