--- a/chatapp/app/assets/stylesheets/rouge.scss.erb
+++ b/chatapp/app/assets/stylesheets/rouge.scss.erb
@@ -1,1 +1,18 @@
 <%= Rouge::Themes::Github.render(:scope => '.highlight') %>
+<%#= Rouge::Themes::MonokaiSublime.render(:scope => '.highlight') %>
+.highlight{
+    display: flex;
+    padding: 3px 5px;
+    width: 100%;
+    border: 1px solid #6d6d6d;
+    border-radius: 4px;
+    .highlight{
+        .code{
+            color: #fff;
+        }
+        display: flex;
+        border: none;
+        width: 100%;
+    }
+
+}
