--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -37,25 +37,36 @@
 
 <script type="text/javascript">
 document.addEventListener("turbo:load", () => {
+    var h = document.getElementById("messages")
+    // console.log(h.offsetHeight)
+    // console.log(window.innerHeight)
+    // console.log(window.outerHeight)
     var i = 2;
     $(".message-all").scrollTop(1);
-    window.addEventListener('scroll', function() {
-      if (($(window).scrollTop() == 0) && (i <= parseInt($(".message_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))){
-        var def = $.ajax({
-          url: $(".message_view").find("nav.pagination a[rel=next]").prop("search").replace(/[0-9]/, i),
-          beforeSend: function(){
-            $('.cv-spinner').removeClass('hide');
+    if(h.offsetHeight == window.innerHeight || h.offsetHeight < window.innerHeight){
+      window.addEventListener('scroll', function() {
+          console.log(h.offsetHeight)
+          console.log(window.outerHeight)
+          // console.log(h.offsetHeight)
+          // console.log(window.outerHeight)
+          // if((i <= parseInt($(".message_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))){
+          if (($(window).scrollTop() == 0) && (i <= parseInt($(".message_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))){
+            var def = $.ajax({
+              url: $(".message_view").find("nav.pagination a[rel=next]").prop("search").replace(/[0-9]/, i),
+              beforeSend: function(){
+                $('.cv-spinner').removeClass('hide');
+              }
+            })
+            setTimeout(function(){
+              $.when(def).done(function(data) {
+                $("#messages").prepend($(data).find("#messages").html());
+                $(window).scrollTop($(window).first().height());
+                i++;
+                $('.cv-spinner').addClass('hide');
+              })
+            }, 850)
           }
-        })
-        setTimeout(function(){
-          $.when(def).done(function(data) {
-            $("#messages").prepend($(data).find("#messages").html());
-            $(window).scrollTop($(window).first().height());
-            i++;
-            $('.cv-spinner').addClass('hide');
-          })
-        }, 850)
-      }
-    })
+      })
+    }
 });
 </script>
