--- a/chatapp/app/views/room/search_form.html.erb
+++ b/chatapp/app/views/room/search_form.html.erb
@@ -22,13 +22,7 @@
               <% end %>
             </div>
             <%= room.name %>
-            <% if room.created_at >= Date.today.beginning_of_day %>
-              今日<%= room.created_at.strftime("%H:%M") %>
-            <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
-              昨日<%= room.created_at.strftime("%H:%M") %>
-            <% else %>
-              <%= room.created_at.strftime("%Y/%m/%d") %>
-            <% end %>
+            <%= date_format(room.created_at)%>
             <%= link_to "参加", room_join_path(room.id) %>
         </div>
 
@@ -43,13 +37,7 @@
                 <% end %>
               </div>
               <%= room.name %>
-              <% if room.created_at >= Date.today.beginning_of_day %>
-                今日<%= room.created_at.strftime("%H:%M") %>
-              <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
-                昨日<%= room.created_at.strftime("%H:%M") %>
-              <% else %>
-                <%= room.created_at.strftime("%Y/%m/%d") %>
-              <% end %>
+              <%= date_format(room.created_at)%>
           </div>
         <% end %>
     <% end %>
