--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -30,12 +30,22 @@
           </div>
         </div>
         <div class="menu">
-          <%= link_to "/", class: "menu-one" do %><i class="fa-solid fa-house"></i> トップ<% end %>
-          <%= link_to "/room", class: "menu-one" do %><i class="fa-solid fa-comment"></i> ルーム一覧<% end %>
-          <%= link_to "/room/joined", class: "menu-one" do %><i class="fa-solid fa-comment"></i> 参加中のルーム<% end %>
-          <%= link_to "/search/rooms", class: "menu-one" do %><i class="fa-solid fa-magnifying-glass"></i> ルームを探す<% end %>
+          <%= link_to "/", class: "menu-one" do %>
+            <i class="fa-solid fa-house"></i> トップ
+          <% end %>
+          <%= link_to "/room", class: "menu-one" do %>
+            <i class="fa-solid fa-comment"></i> ルーム一覧
+          <% end %>
+          <%= link_to "/room/joined", class: "menu-one" do %>
+            <i class="fa-solid fa-comment"></i> 参加中のルーム
+          <% end %>
+          <%= link_to "/search/rooms", class: "menu-one" do %>
+            <i class="fa-solid fa-magnifying-glass"></i> ルームを探す
+          <% end %>
 
-          <div class="menu-one" id="open-modal" name="open-modal-btn"><i class="fa-solid fa-plus"></i> ルームを作成</div>
+          <div class="menu-one" id="open-modal" name="open-modal-btn">
+            <i class="fa-solid fa-plus"></i> ルームを作成
+          </div>
 
             <div id="demo-modal" class="modal">
               <div class="modal-content">
@@ -44,17 +54,20 @@
                   <h2>新規作成</h2>
                 </div>
                 <div class="modal-body">
-                    カテゴリ<div class="create-from"><input type="text"></div>
-                    ルーム名<div class="create-from"><input type="text"></div>
-                    ルームアイコン<div class="create-from"><input type="file"></div>
-                    ルーム詳細情報<div class="create-from">
-                    <textarea class="modal-textarea"></textarea></div>
-                    <input type="submit">
+                  カテゴリ<div class="create-from"><input type="text"></div>
+                  ルーム名<div class="create-from"><input type="text"></div>
+                  ルームアイコン<div class="create-from"><input type="file"></div>
+                  ルーム詳細情報<div class="create-from">
+                    <textarea class="modal-textarea"></textarea>
+                  </div>
+                  <input type="submit">
                 </div>
               </div>
             </div>
 
-          <%= link_to setting_path, class: "menu-one" do %><i class="fa-solid fa-gear"></i> 設定<% end %>
+          <%= link_to setting_path, class: "menu-one" do %>
+            <i class="fa-solid fa-gear"></i> 設定
+          <% end %>
         </div>
       </div>
       <div class="main-container">
