--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -16,7 +16,8 @@
             <%= room.name %>
             <% if room.created_at >= Date.today.beginning_of_day %>
               今日<%= room.created_at.strftime("%H:%M") %>
-            <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
+            <% elsif room.created_at < Date.today.beginning_of_day &&
+                     room.created_at >= Date.yesterday.beginning_of_day%>
               昨日<%= room.created_at.strftime("%H:%M") %>
             <% else %>
               <%= room.created_at.strftime("%Y/%m/%d") %>
@@ -46,7 +47,8 @@
             <%= room.name %>
             <% if room.created_at >= Date.today.beginning_of_day %>
               今日<%= room.created_at.strftime("%H:%M") %>
-            <% elsif room.created_at < Date.today.beginning_of_day && room.created_at >= Date.yesterday.beginning_of_day%>
+            <% elsif room.created_at < Date.today.beginning_of_day &&
+                     room.created_at >= Date.yesterday.beginning_of_day%>
               昨日<%= room.created_at.strftime("%H:%M") %>
             <% else %>
               <%= room.created_at.strftime("%Y/%m/%d") %>
