--- a/chatapp/app/views/room/new_room.html.erb
+++ b/chatapp/app/views/room/new_room.html.erb
@@ -21,7 +21,8 @@
 人気カテゴリー  
 <div class="category">
   <% @categories.each_with_index do |category, i| %>
-    <div id="category-name-<%= i %>"><%= category[0] %></div><div class="category-count">(<%= category[1] %>)</div>
+    <div id="category-name-<%= i %>"><%= category[0] %></div>
+    <div class="category-count">(<%= category[1] %>)</div>
   <% end %>
 </div>
 
@@ -31,9 +32,10 @@
       room_category.value = "未分類";
       room_category.value = e.target.textContent;
     }
-  <% @categories.each_with_index do |category, i| %>
-    document.getElementById("category-name-" + <%= i %>).addEventListener('click', ChangeValue, false)
-  <% end %>
+    <% @categories.each_with_index do |category, i| %>
+      document.getElementById("category-name-" + <%= i %>).
+      addEventListener('click', ChangeValue, false)
+    <% end %>
   });
 </script>
 
