--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -29,7 +29,9 @@
 <div class="room-header-list">
   <div class="room-header">
     <div class="room_header_left">
-      <%= link_to "/room/joined" do %><div class="room_back"><i class="fa-solid fa-angle-left"></i></div><% end %>
+      <%= link_to "/room/joined" do %>
+        <div class="room_back"><i class="fa-solid fa-angle-left"></i></div>
+      <% end %>
       <div class="room_title"><%= @room.name %></div>
     </div>
     <div class="room_header_right">
@@ -37,25 +39,23 @@
     </div>
     <%= link_to "ルームから退室する", room_leave_path(@room.id), data: {turbo_method: :delete} %>
   </div>
-<div id="message-notice"></div>
+  <div id="message-notice"></div>
 </div>
-
 
 <p id="notice"><%= notice %></p>
 
 <div class="room-content">
-<div id="data" data-room-id="<%= @room.id %>" data-user-id="<%= @current_user.id %>"></div>
-<%= render "messages", messages: @messages %>
+  <div id="data" data-room-id="<%= @room.id %>" data-user-id="<%= @current_user.id %>"></div>
+  <%= render "messages", messages: @messages %>
   <% @members.each do |member| %>
     <% @joiner = User.find_by(id: member.user_id) %>
     <div id="user-data" user-data-id="<%= @joiner.id %>"></div>
     <%= @joiner.name %>
     <% @status = @joiner.status ? "online":nil %>
-        <span class="user-status <%= @status %> user-<%= @joiner.id %>-status">
-          ・
-        </span>
+      <span class="user-status <%= @status %> user-<%= @joiner.id %>-status">
+        ・
+      </span>
   <% end %>
-
 
 <div id="dummy-margin" class="dummy-margin"></div>
 
@@ -63,7 +63,8 @@
   <div class="message-form">
     <div class="message-textarea">
       <div id="dummy-textarea" class="dummy-textarea" aria-hidden="true"></div>
-      <%= f.text_area :sentence, id: "message-sentence", class: "message-sentense-class", :placeholder => "メッセージを送信する" %>
+      <%= f.text_area :sentence, id: "message-sentence",
+          class: "message-sentense-class", :placeholder => "メッセージを送信する" %>
     </div>
     <input type="submit" name="commit" value="" id="message-submit" class="message-submit">
     <p id="helper-text" style="color: red;"></p>
@@ -109,7 +110,6 @@
         if(scrollPos >= elemOffset - wh){
           document.getElementById('message-notice').textContent = "";
         }
-
     });
   });
 </script>
