--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -21,6 +21,9 @@
         <div class="title">メンバー</div>
           <div class="contents"></div>
       </div>
+      <div class="modal-inner-content">
+        <div class="contents"> <%= link_to "ルームから退室する", room_leave_path(@room.id), data: {turbo_method: :delete} %></div>
+      </div>
     </div>
   </div>
   <div class="background-shadow" id="js-black-sh"></div>
@@ -35,7 +38,6 @@
     <div class="room_header_right">
       <i id="js-show-modal-detail" class="fa-solid fa-caret-down"></i>
     </div>
-    <%= link_to "ルームから退室する", room_leave_path(@room.id), data: {turbo_method: :delete} %>
   </div>
 <div id="message-notice"></div>
 </div>
