--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -132,11 +132,12 @@
 
     window.document.onkeydown = function(event){
       if (!event.shiftKey && event.key == 'Enter'){
+        if (event.key === 'Enter') {
+          console.log("oppai");
+          document.getElementById('message-form').submit();
+        }
         console.log("shift");
         event.preventDefault();
-      }else if (event.key === 'Enter') {
-        console.log("oppai");
-        document.getElementById('message-form').submit();
       }
     }
 </script>
