--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -1,3 +1,6 @@
+<div class="content-column">
+  <div class="title">参加中のルーム</div>
+</div>
 <div class="rooms">
   <% @room_info.each do |room| %>
     <%= link_to room_page_path(room.id) do %>
