--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -45,7 +45,7 @@
 
 <div class="room-content">
 <div id="data" data-room-id="<%= @room.id %>" data-user-id="<%= @current_user.id %>"></div>
-<%= render "messages", messages: @messages %>
+<%= render "messages", messages: @messages, members: @members_hash %>
   <% @members.each do |member| %>
     <div id="user-data" user-data-id="<%= member.id %>"></div>
     <%= member.name %>
