--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -1,54 +1,4 @@
-<div class="modal-detail" id="js-modal-detail">
-  <div class="modal-detail-inner">
-  <div class="detail-header">
-    <div class="close-btn" id="js-close-btn"><i class="fas fa-times"></i></div>
-  </div>
-    <div class="detail-body">
-      <div class="cp_tab">
-        <input type="radio" name="cp_tab" id="tab1_1" aria-controls="first_tab01" checked><label for="tab1_1">ルーム情報</label><input type="radio" name="cp_tab" id="tab1_2" aria-controls="second_tab01"><label for="tab1_2">メンバー</label><input type="radio" name="cp_tab" id="tab1_3" aria-controls="third_tab01"><label for="tab1_3">設定</label>
-        <div class="cp_tabpanels">
-          <div id="first_tab01" class="cp_tabpanel">
-              <div class="modal-inner-content">
-                <div class="title">カテゴリ</div>
-                  <div class="contents"><%= @room.category %></div>
-              </div>
-              <div class="modal-inner-content">
-                <div class="title">ルーム名</div>
-                  <div class="contents"><%= @room.name %></div>
-              </div>
-              <div class="modal-inner-content">
-                <div class="title">ルーム詳細情報</div>
-                  <div class="contents"><%= @room.describe %></div>
-              </div>
-            </div>
-            <div id="second_tab01" class="cp_tabpanel">
-              <div class="modal-inner-content">
-                <div class="title">メンバー</div>
-                  <div class="contents">
-                    <% @members.each do |member| %>
-                      <% @joiner = User.find_by(id: member.user_id) %>
-                        <div id="user-data" user-data-id="<%= @joiner.id %>"></div>
-                          <%= @joiner.name %>
-                            <% @status = @joiner.status ? "online":nil %>
-                            <span class="user-status <%= @status %> user-<%= @joiner.id %>-status">
-                              ・
-                            </span>
-                          <% end %>
-                </div>
-              </div>
-            </div>
-            <div id="third_tab01" class="cp_tabpanel">
-            <h2>安心してください　ここ　空いてますよ</h2>
-              <div class="modal-inner-content">
-                  <div class="contents"> <%= link_to "ルームから退室する", room_leave_path(@room.id), data: {turbo_method: :delete} %></div>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-  </div>
-  <div class="background-shadow" id="js-black-sh"></div>
-</div>
+<%= render "room_info", room: @room %>
 
 <div class="room-header-list">
   <div class="room-header">
