--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -208,6 +208,9 @@
   .hide {
     display:none;
   }
+  .message-all{
+    display: none;
+  }
   .message-one{
     display: flex;
     font-size: 15px;
