--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -1,6 +1,9 @@
 <div class="cv-spinner hide">
     <span class="spinner"></span>
 </div>
+<div class="more hide">
+  <input type="button" id="more">
+</div>
 <div id="messages" class="message-all">
   <% if messages != nil %>
     <% messages.reverse_each do |message| %>
@@ -28,28 +31,3 @@
   <%= paginate messages %>
   </div>
 </div>
-
-<script type="text/javascript">
-document.addEventListener("turbo:load", () => {
-    var i = 2;
-    $(".message-all").scrollTop(1);
-    window.addEventListener('scroll', function() {
-      if (($(window).scrollTop() == 0) && (i <= parseInt($(".message_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))){
-        var def = $.ajax({
-          url: $(".message_view").find("nav.pagination a[rel=next]").prop("search").replace(/[0-9]/, i),
-          beforeSend: function(){
-            $('.cv-spinner').removeClass('hide');
-          }
-        })
-        setTimeout(function(){
-          $.when(def).done(function(data) {
-            $("#messages").prepend($(data).find("#messages").html());
-            $(window).scrollTop($(window).first().height());
-            i++;
-            $('.cv-spinner').addClass('hide');
-          })
-        }, 850)
-      }
-    })
-});
-</script>
