--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -115,14 +115,12 @@
 
 <script type="text/javascript">
   document.addEventListener("turbo:load", () => {
-
     // したの一文はページにアクセスした際に一番したまでスクロールする処理です。
-    window.scroll(0, document.body.scrollHeight);
-
-    var butotn = document.getElementById('message-notice');
-    butotn.onclick = function() {
-      window.scrollTo(0, document.body.scrollHeight);
-    }
+    var msg = document.getElementById("messages")
+    setTimeout(function(){
+      window.scroll(0, msg.scrollHeight);
+    },1)
+    $("#messages").fadeIn();
   });
 </script>
 
