--- a/chatapp/app/views/layouts/application.html.erb
+++ b/chatapp/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
       <script type="text/javascript">
         document.addEventListener("turbo:load", () => {
-          let button = document.getElementById('more');
+          let button = document.getElementById('more-messages');
           var i = 2;
           var jqxhr;
           $(".message-all").scrollTop(1);
