--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -1,8 +1,8 @@
 <div class="cv-spinner hide">
     <span class="spinner"></span>
 </div>
-<div class="more hide">
-  <input type="button" id="more">
+<div class="more-messages hide">
+  <input type="button" id="more-messages">
 </div>
 <div id="messages" class="message-all">
   <% if messages != nil %>
