change class name

--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -1,7 +1,7 @@
 <div class="cv-spinner hide">
     <span class="spinner"></span>
 </div>
-<div class="more-messages hide">
+<div class="hide more-messages">
   <input type="button" id="more-messages">
 </div>
 <div id="messages" class="message-all">
