--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -1,8 +1,10 @@
-<div class="cv-spinner hide">
-    <span class="spinner"></span>
-</div>
-<div class="hide more-messages">
-  <input type="button" id="more-messages">
+<div class="infinite-scroll">
+  <div class="cv-spinner hide">
+      <span class="spinner"></span>
+  </div>
+  <div class="more-messages hide">
+    <input type="button" id="more-messages">
+  </div>
 </div>
 <div id="messages" class="message-all">
   <% if messages != nil %>
