--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -185,28 +185,30 @@
   width: calc(100% - 40px);
   padding: 10px 0px 80px 10px;
   margin-top: 55px;
-  .cv-spinner {
-    margin: 22px 0px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;  
-  }
-  .spinner {
-    width: 20px;
-    height: 20px;
-    border: 4px #ddd solid;
-    border-top: 4px #2e93e6 solid;
-    border-radius: 50%;
-    animation: sp-anime 0.8s infinite linear;
-  }
-  @keyframes sp-anime {
-    100% { 
-      transform: rotate(360deg); 
+  .infinite-scroll {
+    .cv-spinner {
+      margin: 22px 0px;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;  
     }
-  }
-  .hide {
-    display:none;
+    .spinner {
+      width: 20px;
+      height: 20px;
+      border: 4px #ddd solid;
+      border-top: 4px #2e93e6 solid;
+      border-radius: 50%;
+      animation: sp-anime 0.8s infinite linear;
+    }
+    @keyframes sp-anime {
+      100% { 
+        transform: rotate(360deg); 
+      }
+    }
+    .hide {
+      display:none;
+    }  
   }
   .message-all {
     display: none;
