妖怪また出た

--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -3,16 +3,14 @@
     <div class="detail-header">
       <div class="close-btn" id="js-close-btn"><i class="fas fa-times"></i></div>
     </div>
-
     <div class="detail-body">
       <div class="tab_container">
         <input id="tab1" type="radio" name="tab_item" checked>
-        <label class="tab_item" for="tab1">タブ1</label>
+        <label class="tab_item" for="tab1">ルーム詳細情報</label>
         <input id="tab2" type="radio" name="tab_item">
-        <label class="tab_item" for="tab2">タブ2</label>
+        <label class="tab_item" for="tab2">メンバー</label>
         <input id="tab3" type="radio" name="tab_item">
-        <label class="tab_item" for="tab3">タブ3</label>
-
+        <label class="tab_item" for="tab3">設定</label>
         <div class="tab_content" id="tab1_content">
           <div class="tab_content_description">
             <div class="modal-inner-content">
@@ -29,7 +27,6 @@
             </div>
           </div>
         </div>
-
         <div class="tab_content" id="tab2_content">
           <div class="tab_content_description">
             <div class="modal-inner-content">
@@ -48,7 +45,6 @@
             </div>
           </div>
         </div>
-
         <div class="tab_content" id="tab3_content">
           <div class="tab_content_description">
             <div class="modal-inner-content">
@@ -64,7 +60,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
