--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -3,8 +3,7 @@
 </div>
 
 <div class="rooms">
-  <% @room.each do |room| %>
-    <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+  <% @room_latest.each do |room| %>
         <div class="room"> 
             <div class="room-image">
               <% if room.image.length > 0 %>
@@ -17,7 +16,6 @@
             <%= date_format(room.created_at)%>
             <%= link_to "参加", room_join_path(room.id), "data-turbo": false %>
         </div>
-    <% end %>
   <% end %>
 </div>
 
@@ -26,9 +24,7 @@
 </div>
 
 <div class="rooms">
-  <th><%= sort_link(@search, :created_at, "作成日", hide_indicator: true) %></th>
-  <% @results.each do |room| %>
-    <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+  <% @room_all.each do |room| %>
         <div class="room"> 
             <div class="room-image">
               <% if room.image.length > 0 %>
@@ -41,7 +37,6 @@
             <%= date_format(room.created_at)%>
             <%= link_to "参加", room_join_path(room.id), "data-turbo": false %>
         </div>
-    <% end %>
   <% end %>
 </div>
 
