--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -5,12 +5,13 @@
     </div>
     <div class="detail-body">
       <div class="tab_container">
-        <input id="tab1" type="radio" name="tab_item" checked>
-        <label class="tab_item" for="tab1">ルーム詳細情報</label>
-        <input id="tab2" type="radio" name="tab_item">
-        <label class="tab_item" for="tab2">メンバー</label>
-        <input id="tab3" type="radio" name="tab_item">
-        <label class="tab_item" for="tab3">設定</label>
+          <input id="tab1" type="radio" name="tab_item" checked>
+          <label class="tab_item" for="tab1">ルーム情報</label>
+          <input id="tab2" type="radio" name="tab_item">
+          <label class="tab_item" for="tab2">メンバー</label>
+          <input id="tab3" type="radio" name="tab_item">
+          <label class="tab_item" for="tab3">設定</label>
+        <div class="unkounkounko"></div>
         <div class="tab_content" id="tab1_content">
           <div class="tab_content_description">
             <div class="modal-inner-content">
@@ -59,10 +60,8 @@
             </div>
           </div>
         </div>
-      </div>
+      </div><!-- tab container end -->
     </div>
   </div>
   <div class="background-shadow" id="js-black-sh"></div>
 </div>
-
-
