--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -10,7 +10,7 @@
   <% if messages != nil %>
     <% messages.reverse_each do |message| %>
       <div id="message-<%= message.id%>" class="message-one">
-        <% user = members[message.user_id] %>
+        <% user = @members_hash[message.user_id] %>
         <div class="message-left"><img src=<%= user["image"] %>></div>
         <div class="message-right">
           <div class="message-user-info">
